[tool.poetry]
name = "woocommerce-helper"
version = "0.1.0"
description = ""
authors = ["Samyak Bardiya <mail@samyakbardiya.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
